--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Mi Primera Página</title>
 </head>
 <body>
-  <h1>¡Hola Mundo!</h1>
+  <h1>¡Hola Perras!</h1>
   <p>Bienvenido a mi página web en GitHub Pages.</p>
 </body>
 </html>
